--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ author:
   github           : #"academicpages"
   google_plus      :
   keybase          :
-  instagram        : "https://www.instagram.com/leonkennedy0505"
+  instagram        : "leonkennedy0505"
   lastfm           :
   linkedin         : #"https://www.linkedin.com/in/nanqing-dong-7ba91ab7/"
   orcid            : #"http://orcid.org/yourorcidurl"
