--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Leon N. Dong"
-  avatar           : "profile.png"
+  avatar           : "profile_la.png"
   bio              : #"Petuum, Inc."
   location         : #"Pittsburgh, Pennsylvania, USA"
   employer         :
