--- a/_config.yml
+++ b/_config.yml
@@ -94,12 +94,12 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : #"academicpages"
+  github           : "https://github.com/leonndong"
   google_plus      :
   keybase          :
   instagram        : "the_evening_of_lodi"
   lastfm           :
-  linkedin         : #"https://www.linkedin.com/in/nanqing-dong-7ba91ab7/"
+  linkedin         : "https://www.linkedin.com/in/nanqing-dong-7ba91ab7/"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
