update web address

--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ author:
   keybase          :
   instagram        : "the_evening_of_lodi"
   lastfm           :
-  linkedin         : "nanqing-dong-7ba91ab7/"
+  linkedin         : "nanqing-dong-7ba91ab7"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
