--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,3 +8,6 @@ main:
 
   - title: "Professional Experience"
     url: /professional/    
+
+  - title: "Personal Interests"
+    url: /interests/    
