--- a/_config.yml
+++ b/_config.yml
@@ -97,9 +97,9 @@ author:
   github           : "leonndong"
   google_plus      :
   keybase          :
-  instagram        : "the_evening_of_lodi"
+  instagram        : #"the_evening_of_lodi"
   lastfm           :
-  linkedin         : #"nanqing-dong-7ba91ab7"
+  linkedin         : "nanqing-dong-7ba91ab7"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
