update profile image

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Nanqing Dong"
-  avatar           : "profile.png"
+  avatar           : "profile_la.png"
   bio              : "University of Oxford"
   location         : "Oxford, Oxfordshire, UK"
   employer         :
