--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ author:
   github           : "eveningdong"
   google_plus      :
   keybase          :
-  instagram        : "the_evening_of_lodi"
+  instagram        : #"the_evening_of_lodi"
   lastfm           :
   linkedin         : #"nanqing-dong-7ba91ab7"
   orcid            : #"http://orcid.org/yourorcidurl"
