--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Nanqing Dong"
   avatar           : "profile_la.png"
-  bio              : "Artist|Scientist|Professor"
+  bio              : "Artist | Scientist | Professor \n University of Oxford"
   location         : "Shanghai, China"
-  employer         : "Shanghai Artificial Intelligence Laboratory"
+  employer         : # "Shanghai Artificial Intelligence Laboratory"&
   googlescholar    : "https://scholar.google.com/citations?user=0DX2YsQAAAAJ&hl=en&oi=ao"
   email            : "nanqing.dong@gmail.com"
   uri              :
