--- a/_config.yml
+++ b/_config.yml
@@ -80,9 +80,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Nanqing Dong"
+  name             : "Nanqing Dong \n 董楠卿"
   avatar           : "profile_la.png"
-  bio              : "Artist | Scientist | Professor \n University of Oxford"
+  bio              : "Artist | Scientist | Professor \n PhD@University of Oxford"
   location         : "Shanghai, China"
   employer         : # "Shanghai Artificial Intelligence Laboratory"&
   googlescholar    : "https://scholar.google.com/citations?user=0DX2YsQAAAAJ&hl=en&oi=ao"
