--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Nanqing Dong 董楠卿"
   avatar           : "profile_la.png"
-  bio              : "Artist | Scientist | Professor \n Cornell | Carnegie Mellon | Oxford \n Lifelong Learner"
+  bio              : "Artist | Scientist | Professor \n Cornell | CMU | Oxford \n Lifelong Learner"
   location         : "Shanghai, China"
   employer         : # "Shanghai Artificial Intelligence Laboratory"&
   googlescholar    : "https://scholar.google.com/citations?user=0DX2YsQAAAAJ&hl=en&oi=ao"
