--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Shanghai, China"
   employer         : # "Shanghai Artificial Intelligence Laboratory"&
   googlescholar    : "https://scholar.google.com/citations?user=0DX2YsQAAAAJ&hl=en&oi=ao"
-  email            : "nanqing.dong@gmail.com"
+  email            : "dongnanqing@pjlab.org.cn"
   uri              :
   bitbucket        :
   codepen          :
