--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Research"
     url: /research/
 
-#  - title: "Talk"
-#    url: /talk/
+  - title: "Talk"
+    url: /talk/
 
 #  - title: "Work"
 #    url: /work/
